<?xml version="1.0" encoding="utf-8"?>
<!-- The whole activity inside a scroll view to make it responsive and scrollable -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- The activity layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">


        <!-- The Udacity logo view-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="true"
            android:maxWidth="150dp"
            android:maxHeight="150dp"
            android:scaleType="fitCenter"
            android:src="@drawable/udacitylogo"
            android:contentDescription="@string/udacitylogo"
            />

        <!-- The heading View -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heading"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:background="#0080FF"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAlignment="center"
            />

        <!-- User Name input field -->
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintName"
            android:inputType="textCapWords"
            android:importantForAutofill="no"
            />

        <!-- The Instructions View. -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            />

        <!-- Question 1 and Answers View -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Question 1 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_1"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                />

            <!-- The four answer choices in a 2 X 2 design  -->
            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                >

                <RadioButton
                    android:id="@+id/radio1A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1A"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:textSize="14sp"
                    android:onClick="onRadioClick1"

                    />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                </View>

                <RadioButton
                    android:id="@+id/radio1B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1B"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="end"
                    android:textSize="14sp"
                    android:onClick="onRadioClick1"


                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp">

                <RadioButton
                    android:id="@+id/radio1C"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1C"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:textSize="14sp"
                    android:onClick="onRadioClick1"
                    />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                </View>

                <RadioButton
                    android:id="@+id/radio1D"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1D"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:textSize="14sp"
                    android:onClick="onRadioClick1"

                    />


            </LinearLayout>

            </RadioGroup>


        </LinearLayout>

        <!-- Question 2 and Answers View -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Question 2 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_2"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                />

            <!-- The four answer choices in a 2 X 2 design  -->
            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    >

                    <RadioButton
                        android:id="@+id/radio2A"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer2A"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:textSize="14sp"
                        android:onClick="onRadioClick2"

                        />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                    </View>

                    <RadioButton
                        android:id="@+id/radio2B"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer2B"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_gravity="end"
                        android:textSize="14sp"
                        android:onClick="onRadioClick2"


                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp">

                    <RadioButton
                        android:id="@+id/radio2C"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer2C"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:textSize="14sp"
                        android:onClick="onRadioClick2"
                        />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                    </View>

                    <RadioButton
                        android:id="@+id/radio2D"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer2D"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:textSize="14sp"
                        android:onClick="onRadioClick2"

                        />


                </LinearLayout>

            </RadioGroup>


        </LinearLayout>

        <!-- Question 3 and Answers View -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Question 2 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_3"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                />

            <!-- The four answer choices in a 2 X 2 design  -->
            <RadioGroup
                android:id="@+id/radioGroup3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    >

                    <RadioButton
                        android:id="@+id/radio3A"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer3A"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:textSize="14sp"
                        android:onClick="onRadioClick3"

                        />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                    </View>

                    <RadioButton
                        android:id="@+id/radio3B"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer3B"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_gravity="end"
                        android:textSize="14sp"
                        android:onClick="onRadioClick3"


                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp">

                    <RadioButton
                        android:id="@+id/radio3C"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer3C"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:textSize="14sp"
                        android:onClick="onRadioClick3"
                        />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1">

                    </View>

                    <RadioButton
                        android:id="@+id/radio3D"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer3D"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:textSize="14sp"
                        android:onClick="onRadioClick3"

                        />


                </LinearLayout>

            </RadioGroup>


        </LinearLayout>



        <!-- Results Display Area -->

        <ImageView
            android:id="@+id/finalImage"
            android:contentDescription="@string/resultsImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:maxWidth="200dp"
            android:maxHeight="200dp"
            android:scaleType="fitCenter"
            />

        <TextView
            android:id="@+id/resultsDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <!-- Submission and share -->

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <Button
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/submit"
               android:onClick="SubmitResults"
               android:layout_weight="1"
               android:layout_marginBottom="8dp"
               style="?android:attr/borderlessButtonStyle"
               />

           <Button
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/share"
               android:onClick="shareResults"
               android:layout_weight="1"
               style="?android:attr/borderlessButtonStyle"
               />

           <Button
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:text="@string/reset"
               android:onClick="resetQuiz"
               android:layout_weight="1"
               style="?android:attr/borderlessButtonStyle"/>




       </LinearLayout>

        <!-- Custom Thank You Message -->
        <TextView
            android:id="@+id/bottomMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            />


    </LinearLayout>

</ScrollView>